--- a/movdtl.html
+++ b/movdtl.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <link rel="stylesheet" href="css/app.css" />
-    <title>Movie Collector</title>
+    <title>NexFlit - Movie Details</title>
     <!-- box icons -->
     <link href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" rel="stylesheet" />
   </head>
